# Spring/src/main/java/de/sep/calocalendar/entities/UserProfile.java
@@ -4,8 +4,10 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
+import lombok.Data;
 
 @Entity
+@Data
 public class UserProfile {
 
     @Id
@@ -13,7 +15,7 @@ public class UserProfile {
     private Long id;
 
     private String userName;
-    private boolean isMan;
+    private int gender;
     private int age;
     private double weight;
     private int levelOfPhysicalActivity;
