# Spring/src/main/resources/api.yaml
@@ -111,8 +111,8 @@ components:
           readOnly: true
         userName:
           type: string
-        isMan:
-          type: boolean
+        gender:
+          type: integer
         age:
           type: integer
         weight:
@@ -137,7 +137,6 @@ components:
           type: string
         cals:
           type: integer
-          format: int64
     MealModel:
       type: object
       properties:
